@@ -18,7 +18,7 @@ class Devise::RegistrationsController < DeviseController
         sign_in(resource_name, resource)
         respond_with resource, :location => after_sign_up_path_for(resource)
       else
-        set_flash_message :notice, :"signed_up_but_#{inactive_reason(resource)}" if is_navigational_format?
+        set_flash_message :notice, :"signed_up_but_#{resource.inactive_message}" if is_navigational_format?
         expire_session_data_after_sign_in!
         respond_with resource, :location => after_inactive_sign_up_path_for(resource)
       end
@@ -74,40 +74,34 @@ class Devise::RegistrationsController < DeviseController
 
   protected
 
-    # Build a devise resource passing in the session. Useful to move
-    # temporary session data to the newly created user.
-    def build_resource(hash=nil)
-      hash ||= params[resource_name] || {}
-      self.resource = resource_class.new_with_session(hash, session)
-    end
+  # Build a devise resource passing in the session. Useful to move
+  # temporary session data to the newly created user.
+  def build_resource(hash=nil)
+    hash ||= params[resource_name] || {}
+    self.resource = resource_class.new_with_session(hash, session)
+  end
 
-    # The path used after sign up. You need to overwrite this method
-    # in your own RegistrationsController.
-    def after_sign_up_path_for(resource)
-      after_sign_in_path_for(resource)
-    end
+  # The path used after sign up. You need to overwrite this method
+  # in your own RegistrationsController.
+  def after_sign_up_path_for(resource)
+    after_sign_in_path_for(resource)
+  end
 
-    # Returns the inactive reason translated.
-    def inactive_reason(resource)
-      reason = resource.inactive_message.to_s
-      I18n.t("devise.registrations.reasons.#{reason}", :default => reason)
-    end
+  # The path used after sign up for inactive accounts. You need to overwrite
+  # this method in your own RegistrationsController.
+  def after_inactive_sign_up_path_for(resource)
+    respond_to?(:root_path) ? root_path : "/"
+  end
 
-    # The path used after sign up for inactive accounts. You need to overwrite
-    # this method in your own RegistrationsController.
-    def after_inactive_sign_up_path_for(resource)
-      respond_to?(:root_path) ? root_path : "/"
-    end
+  # The default url to be used after updating a resource. You need to overwrite
+  # this method in your own RegistrationsController.
+  def after_update_path_for(resource)
+    signed_in_root_path(resource)
+  end
 
-    # The default url to be used after updating a resource. You need to overwrite
-    # this method in your own RegistrationsController.
-    def after_update_path_for(resource)
-      signed_in_root_path(resource)
-    end
-
-    # Authenticates the current scope and gets the current resource from the session.
-    def authenticate_scope!
-      send(:"authenticate_#{resource_name}!", :force => true)
-      self.resource = send(:"current_#{resource_name}")
-    end
+  # Authenticates the current scope and gets the current resource from the session.
+  def authenticate_scope!
+    send(:"authenticate_#{resource_name}!", :force => true)
+    self.resource = send(:"current_#{resource_name}")
+  end
 end
